# toyfoc-rp2040

./: Cargo.toml  README.md
.cargo/: config.toml
src/: ctrl.rs  current.rs  main.rs  pwms.rs
